# Habits-Tracker

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: __init__.py  asgi.py  env.py  settings.py  urls.py  wsgi.py
config/django/: base.py  production.py
config/settings/: celery.py  cors.py  telegram.py
habits_tracker/api/: apps.py  pagination.py  urls.py
habits_tracker/authentication/: apis.py  apps.py  urls.py
habits_tracker/habits/: admin.py  apis.py  apps.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  validators.py
habits_tracker/habits/migrations/: 0001_initial.py  0002_initial.py  0002_regularhabit_start_time_before_end_time.py  0002_relatedhabit_frequency.py
habits_tracker/habits/tests/: factories.py  test_apis.py
habits_tracker/tasks/: celery.py
habits_tracker/users/: admin.py  apis.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py
habits_tracker/users/management/commands/: csu.py
habits_tracker/users/migrations/: 0001_initial.py  0002_user_telegram_id.py
users/: models.py  urls.py
